Fix bug where img alt background not showing in light mode

--- a/spiffy/spiffy.css
+++ b/spiffy/spiffy.css
@@ -1,6 +1,6 @@
 :root {
 	/* TODO Use relative colors */
-	--color-hsl: hsl(0 0% 10%);
+	--color-hsl: 0 0% 10%;
 	color-scheme: light dark;
 }
 
